added owl carousel and fixed responsive issues

--- a/views/cities.phtml
+++ b/views/cities.phtml
@@ -12,8 +12,8 @@
             <div style="overflow-x: hidden;">
                 <div class="animated fadeInRight animation-text-second">
                     <div class="animated fadeIn">
-                        Zapewniamy kompleksowe wsparcie w zakresie opieki nad sprzętem IT, bieżącej pomocy dla
-                        użytkowników (Helpdesk) oraz administrowania siecią
+                        Masz już dosyć stresów i zastojów w pracy spowodowanych awaryjnością sprzętu w Twojej firmie? Jeśli tak, to znalazłeś się we właściwym
+                        miejscu!
                     </div>
                 </div>
             </div>
@@ -42,54 +42,22 @@
 <div class="content-box-white" id="section1">
     <div class="container" style="    min-width: 70%;">
         <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin about2">
-            <div class="col-8 animated zoomIn" id="about">
-              <div style="padding-bottom: 30px">
-                  <h1>SPRAWDŹ GDZIE DZIAŁAMY</h1>
-              </div>
-                <img src="../web/img/mapa.jpg" alt="OutSourcing IT" height="300" width="400"
-                     style="float:right; margin:0.4rem">
-
-                <h2>Zapewniamy usługi informatyczne dla firm w następujących miastach: (klikane guziki)</h2>
-                <ul>
-                    <li><a href="dabrowagornicza">- Outsourcing IT Dąbrowa Górnicza</a></li>
-                    <li><a href="katowice">- Outsourcing IT Katowice</a></li>
-                    <li><a href="gliwice">- Outsourcing IT Gliwice</a></li>
-                    <li><a href="jaworzno">- Outsourcing IT Jaworzno</a></li>
-                    <li><a href="bedzin"> - Outsourcing IT Będzin</a></li>
-                    <li>- wszystkie inne miasta w promieniu do 40km od Dąbrowy Górniczej gdzie znajduje się
-                            nasza siedziba.</li>
+            <div class="col-5 col-md-10 animated zoomIn" id="about" style="padding-right: 100px;">
+                <div>
+                    <h1 style="text-align: left; color: rgb(217, 29, 21);">TEREN NA KTORYM DZIALAMY</h1>
+                </div>
+                <span style="font-size: 1.5rem; font-family: 'Roboto Condensed', sans-serif;">Zapewniamy usługi informatyczne dla firm na terenie całego Województwa śląskiego, z
+                    szczególnym wskazaniem na poniższe miasta.</span>
+                <ul style="margin-top: 1rem; padding-left: 0px" class="location">
+                    <li><a href="dabrowagornicza"> <i class="fas fa-map-marker-alt" style="-webkit-font-smoothing: antialiased;"></i> Outsourcing IT Dąbrowa
+                            Górnicza</a></li>
+                    <li><a href="katowice"> <i class="fas fa-map-marker-alt" style="-webkit-font-smoothing: antialiased;"></i> Outsourcing IT Katowice</a></li>
+                    <li><a href="gliwice"> <i class="fas fa-map-marker-alt" style="-webkit-font-smoothing: antialiased;"></i> Outsourcing IT Gliwice</a></li>
+                    <li><a href="jaworzno"> <i class="fas fa-map-marker-alt" style="-webkit-font-smoothing: antialiased;"></i> Outsourcing IT Jaworzno</a></li>
+                    <li><a href="bedzin"> <i class="fas fa-map-marker-alt" style="-webkit-font-smoothing: antialiased;"></i> Outsourcing IT Będzin</a></li>
                 </ul>
             </div>
-            <div class="col-4">
-                <div class="text-box">
-                    <h3> Adres </h3>
-                    <p>
-                        VERICOM <br> ul. Parkowa 53 /2 <br> 41-303 Dąbrowa Górnicza
-                    </p>
-                    <p>
-                        NIP: 6292075389<br> REGON: 241660764
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> Telefon i fax </h3>
-                    <p>
-                        +48 502 481 334</br>
-                        +48 503 757 557
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> E-mail </h3>
-                    <p>
-                        biuro@vericom.pl
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> Facebook </h3>
-                    <p>
-                        facebook.com/vericom
-                    </p>
-                </div>
-            </div>
+            <div class="col-7 col-md-10 animated zoomIn map border-shadow" style="    min-height: 450px;"></div>
         </div>
     </div>
 </div>
