--- a/views/city-common.phtml
+++ b/views/city-common.phtml
@@ -1,22 +1,25 @@
-
-<h3>W ramach stałej współpracy zapewniamy kompleksową obsługę informatyczną firm obejmującą w szczególności
+<h3 style="padding-top: 50px;">W ramach stałej współpracy zapewniamy kompleksową obsługę informatyczną firm obejmującą w szczególności
     następujące obszary działania:
 </h3>
-<ul>
-    <li>Wsparcie użytkowników (helpdesk)</li>
-    <li>Zarządzanie i opiekę nad komputerami PC, notebookami oraz urządzeniami mobilnymi</li>
-    <li>Zarządzanie sieciami komputerowymi i telefonicznymi (PSTN\ISDN\voIP)</li>
-    <li>Administrowanie serwerami Microsoft, Microsoft Hyper-V oraz Linux</li>
-    <li>Zarządzanie firmową pocztą e-mail oraz stroną www</li>
-    <li>Stały monitoring kluczowych elementów systemów IT</li>
-    <li>Działania związane z archiwizacją danych i bezpieczeństwem kluczowych obszarów IT</li>
-    <li>Usuwanie awarii systemów komputerowych</li>
-    <li>Działania związane z ochroną antywirusową oraz bezpieczeństwem przepływu danych</li>
-    <li>Utrzymanie systemów klasy ERP i CRM></li>
-    <li>Opieka nad monitoringiem przemysłowym CCTV IP</li>
-    <li>Opieka nad systemami RCP oraz KD</li>
-    <li>Doradztwo, konsulting Technologiczny</li>
-    <li>Wsparcie i reprezentacja klienta w kontaktach z dostawcami usług i sprzętu związanych z
-        informatyką i telekomunikacją
-    </li>
-</ul>
+<div class="row row-50 justify-content-center justify-content-lg-between" style=" margin: 0 auto;">
+    <div class="col-md-12 col-lg-12 col-xs-12">
+    <ul>
+        <li>Wsparcie użytkowników (helpdesk)</li>
+        <li>Zarządzanie i opiekę nad komputerami PC, notebookami oraz urządzeniami mobilnymi</li>
+        <li>Zarządzanie sieciami komputerowymi i telefonicznymi (PSTN\ISDN\voIP)</li>
+        <li>Administrowanie serwerami Microsoft, Microsoft Hyper-V oraz Linux</li>
+        <li>Zarządzanie firmową pocztą e-mail oraz stroną www</li>
+        <li>Stały monitoring kluczowych elementów systemów IT</li>
+        <li>Działania związane z archiwizacją danych i bezpieczeństwem kluczowych obszarów IT</li>
+        <li>Usuwanie awarii systemów komputerowych</li>
+        <li>Działania związane z ochroną antywirusową oraz bezpieczeństwem przepływu danych</li>
+        <li>Utrzymanie systemów klasy ERP i CRM></li>
+        <li>Opieka nad monitoringiem przemysłowym CCTV IP</li>
+        <li>Opieka nad systemami RCP oraz KD</li>
+        <li>Doradztwo, konsulting Technologiczny</li>
+        <li>Wsparcie i reprezentacja klienta w kontaktach z dostawcami usług i sprzętu związanych z
+            informatyką i telekomunikacją
+        </li>
+    </ul>
+    </div>
+</div>
