--- a/views/dabrowagornicza.phtml
+++ b/views/dabrowagornicza.phtml
@@ -17,7 +17,7 @@
         <button class="arrow arrow-right" onclick="plusDivs(1)">&#10095;</button>
         <div class="animation-box">
             <div class="animated fadeInLeft animation-text-first">
-                <div class="animated fadeIn">OPIEKA INFORMATYCZNA FIRM
+                <div class="animated fadeIn">OUTSOURCING IT DĄBROWA GÓRNICZA
                 </div>
             </div>
             <div style="overflow-x: hidden;">
@@ -30,24 +30,24 @@
             </div>
         </div>
     </div>
-    <div class="full-box header-bacground-image2 animated fadeInSlider headers">
-        <button class="arrow arrow-left" onclick="plusDivs(-1)">&#10094;</button>
-        <button class="arrow arrow-right" onclick="plusDivs(1)">&#10095;</button>
-        <div class="animation-box">
-            <div class="animated fadeInLeft animation-text-first">
-                <div class="animated fadeIn">OPIEKA INFORMATYCZNA FIRM
-                </div>
-            </div>
-            <div style="overflow-x: hidden;">
-                <div class="animated fadeInRight animation-text-second">
-                    <div class="animated fadeIn">
-                        Zapewniamy kompleksowe wsparcie w zakresie opieki nad sprzętem IT, bieżącej pomocy dla
-                        użytkowników (Helpdesk) oraz administrowania siecią
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<!--    <div class="full-box header-bacground-image2 animated fadeInSlider headers">-->
+<!--        <button class="arrow arrow-left" onclick="plusDivs(-1)">&#10094;</button>-->
+<!--        <button class="arrow arrow-right" onclick="plusDivs(1)">&#10095;</button>-->
+<!--        <div class="animation-box">-->
+<!--            <div class="animated fadeInLeft animation-text-first">-->
+<!--                <div class="animated fadeIn">OPIEKA INFORMATYCZNA FIRM-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div style="overflow-x: hidden;">-->
+<!--                <div class="animated fadeInRight animation-text-second">-->
+<!--                    <div class="animated fadeIn">-->
+<!--                        Zapewniamy kompleksowe wsparcie w zakresie opieki nad sprzętem IT, bieżącej pomocy dla-->
+<!--                        użytkowników (Helpdesk) oraz administrowania siecią-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 </header>
 
 <div class="content-box-white" id="section1">
@@ -64,35 +64,7 @@
                 </p>
                <?php include("city-common.phtml"); ?>
             </div>
-            <div class="col-4">
-                <div class="text-box">
-                    <h3> Adres </h3>
-                    <p>
-                        VERICOM <br> ul. Parkowa 53 /2 <br> 41-303 Dąbrowa Górnicza
-                    </p>
-                    <p>
-                        NIP: 6292075389<br> REGON: 241660764
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> Telefon i fax </h3>
-                    <p>
-                        +48 502 481 334</br>
-                        +48 503 757 557
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> E-mail </h3>
-                    <p>
-                        biuro@vericom.pl
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> Facebook </h3>
-                    <p>
-                        facebook.com/vericom
-                    </p>
-                </div>
+            <div class="col-4 city border-shadow animated zoomIn" style="box-shadow: 0px 0px 35px -7px rgba(0, 0, 0, 0.75);">
             </div>
         </div>
     </div>
