--- a/views/footer.phtml
+++ b/views/footer.phtml
@@ -1,10 +1,18 @@
+<style>
+    a:hover{
+        color: rgb(217, 29, 21) !important;
+    }
+    a{
+        color: #ffffff;
+    }
+</style>
 <footer id="section3">
     <div class="container">
         <div class="row container-margin">
             <div class="col">
                 <h4> DANE FIRMOWE </h4>
                 <p>
-                    VERICOM <br> ul. Parkowa 53 /2 <br> 41-303 Dąbrowa Górnicza
+                    VERICOM <br> <a href="https://www.google.com/maps/place/Parkowa+53,+41-303+Dąbrowa+Górnicza/">ul. Parkowa 53 /2 </a><br> 41-303 Dąbrowa Górnicza
                 </p>
                 <p>
                     NIP: 6292075389<br> REGON: 241660764
@@ -13,17 +21,17 @@
             <div class="col">
                 <h4> KONTAKT </h4>
                 <p>
-                    +48 502 481 334</br>
-                    +48 503 757 557
+                    <a href="tel:+48 502 481 334">+48 502 481 334</a> </br>
+                    <a href="tel:+48 503 757 557">+48 503 757 557</a>
                 </p>
                 <p>
-                    biuro@vericom.pl
+                    <a href="mailto:biuro@vericom.pl">biuro@vericom.pl</a>
                 </p>
             </div>
             <div class="col">
                 <h4> KONTAKT </h4>
                 <p>
-                    <img width="90" height="90" src="application/web/img/fb.png" alt="" style="max-width: 100%; height: auto;">
+                    <img width="60" height="60" src="web/img/fb.png" alt="" style="max-width: 100%; height: auto;">
                 </p>
                 <p>
                     facebook.com/vericom
@@ -31,17 +39,9 @@
             </div>
             <div class="col">
                 <h4 style="margin-bottom:0px;"> RZETELNA FIRMA </h4>
-                <img width="250" height="90" src="application/web/img/rzetelnafirma.png" alt=""
+                <img width="250" height="90" src="web/img/rzetelnafirma.png" alt=""
                      style="max-width: 100%; height: auto;">
             </div>
         </div>
     </div>
 </footer>
-<script src='https://www.google.com/recaptcha/api.js'></script>
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-3.0.1.js"></script>
-<script type="text/javascript" src="application/web/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="application/web/js/outdatedbrowser.min.js"></script>
-<script type="text/javascript" src="application/web/js/scroll.js"></script>
-<script type="text/javascript" src="application/web/js/animate.js"></script>
-<script type="text/javascript" src="application/web/js/scripts.js"></script>
