--- a/views/help.phtml
+++ b/views/help.phtml
@@ -1,96 +1,35 @@
 <button id="back-to-top" title="Go to top"><i class="fas fa-angle-up"></i></button>
 
 <header class=" dotted">
-    <div class="full-box header-bacground-image1 animated fadeInSlider headers">
-        <button class="arrow arrow-left" onclick="plusDivs(-1)">&#10094;</button>
-        <button class="arrow arrow-right" onclick="plusDivs(1)">&#10095;</button>
-        <div class="animation-box">
-            <div class="animated fadeInLeft animation-text-first">
-                <div class="animated fadeIn">OPIEKA INFORMATYCZNA FIRM
-                </div>
-            </div>
-            <div style="overflow-x: hidden;">
-                <div class="animated fadeInRight animation-text-second">
-                    <div class="animated fadeIn">
-                        Zapewniamy kompleksowe wsparcie w zakresie opieki nad sprzętem IT, bieżącej pomocy dla
-                        użytkowników (Helpdesk) oraz administrowania siecią
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="full-box header-bacground-image2 animated fadeInSlider headers">
-        <button class="arrow arrow-left" onclick="plusDivs(-1)">&#10094;</button>
-        <button class="arrow arrow-right" onclick="plusDivs(1)">&#10095;</button>
-        <div class="animation-box">
-            <div class="animated fadeInLeft animation-text-first">
-                <div class="animated fadeIn">OPIEKA INFORMATYCZNA FIRM
-                </div>
-            </div>
-            <div style="overflow-x: hidden;">
-                <div class="animated fadeInRight animation-text-second">
-                    <div class="animated fadeIn">
-                        Zapewniamy kompleksowe wsparcie w zakresie opieki nad sprzętem IT, bieżącej pomocy dla
-                        użytkowników (Helpdesk) oraz administrowania siecią
-                    </div>
-                </div>
-            </div>
+    <div class=" header-bacground-help animated fadeInSlider headers">
+        <div class="container" style="    min-width: 70%; margin-top: 180px">
+
+        <h1 style="    color: #313132;
+    font-size: 36px;
+    line-height: 45px;
+    font-weight: 600;
+    letter-spacing: 0px;
+    text-align: left;">Pomoc zdalna</h1>
+
         </div>
     </div>
 </header>
 
-<div class="content-box-white" id="section1">
-    <div class="container" style="    min-width: 70%;">
+<div class="content-box-white" id="section1" style="background-color: rgba(128, 128, 128, 0.05);">
+    <div class="container" style="    min-width: 70%; ">
         <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin about2">
-            <div class="col-8 animated zoomIn" id="about">
-                <h3> Parę słów o nas </h3>
-                <p><img src="../web/img/Logo.png" alt="OutSourcing IT" height="100" width="190"
-                        style="float:left; margin:0.4rem"> już<b> od 7 lat specjalizuje się w kompleksowym wsparciu
-                        informatycznym przedsiębiorstw.</b> Naszym przesłaniem jest całościowe podejście
-                    do oczekiwań i zadań stawianych nam przez naszych Klientów.</p>
-                <p> Zapewniamy przedsiębiorstwom pełną<b> opiekę informatyczną realizowaną w modelu outsourcingowym.</b>
-                    Naszym celem jest zabezpieczenie ciągłości pracy oraz bezpieczeństwa systemów informatycznych
-                    Klienta.</p>
-                <p> Jako firma informatyczna świadczymy również profesjonalne wsparcie w zakresie rozwiązań systemowych
-                    dla biznesu.
-                    <b> Specjalizujemy się w projektowaniu i wdrażaniu systemów informatycznych na indywidualne
-                        zamówienie Klienta.</b> W tym celu stworzyliśmy autorską platformę Prelude BPM®, która jest
-                    niezawodnym narzędziem pozwalającym na modelowanie
-                    dowolnych procesów zachodzących w organizacji.</p>
-                <p> MOSPAN zajmuje się ponadto
-                    <b> dostawą profesjonalnego sprzętu IT.</b> W tym celu współpracujemy z czołowymi producentami
-                    komputerów, podzespołów, urządzeń peryferyjnych oraz infrastruktury sieciowej.
-                    <b> Jesteśmy m.in. wyłącznym dystrybutorem na Polskę firmy ICY DOCK®</b> – renomowanego producenta
-                    urządzeń pamięci masowych i archiwizacji danych. </p>
-            </div>
-            <div class="col-4">
-                <div class="text-box">
-                    <h3> Adres </h3>
-                    <p>
-                        VERICOM <br> ul. Parkowa 53 /2 <br> 41-303 Dąbrowa Górnicza
-                    </p>
-                    <p>
-                        NIP: 6292075389<br> REGON: 241660764
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> Telefon i fax </h3>
-                    <p>
-                        +48 502 481 334</br>
-                        +48 503 757 557
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> E-mail </h3>
-                    <p>
-                        biuro@vericom.pl
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> Facebook </h3>
-                    <p>
-                        facebook.com/vericom
-                    </p>
+            <div class="col-8 col-md-10 animated zoomIn" style="margin-left: 50px;margin-bottom: 100px; margin-top: -170px;
+    background: white;">
+                <div class="column mcb-column mcb-item-35pqqu31v one column_column" style="margin: 5%;">
+                    <div class="column_attr clearfix" style="padding:0 10% 0 0;"><h2 style=" text-align: left; color :rgb(217, 29, 21);">Zdalne wsparcie</h2>
+                        <p>To wygodna forma uzyskania wsparcia informatycznego, bez wychodzenia z domu i oddawania urządzenia do naprawy.</p>
+                        <p>Możliwe do realizacji przez niemal 24 godziny, 7 dni w tygodniu.</p>
+                        <p>Wystarczy, aby komputer miał sprawne połączenie internetowe.</p>
+                        <p>Połączenie z Twoim komputerem odbędzie się przez program TeamViewer. Oprogramowanie to jest jednym z najpopularniejszych na świecie
+                            rozwiązań do zdalnego wsparcia. Jego producentem jest TeamViewer GmbH (<a href="https://www.teamviewer.com/en/privacy-policy/"
+                                                                                                      style="color :rgb(217, 29, 21);">
+                                sprawdź politykę prywatności</a>)</p>
+                        <a href="https://get.teamviewer.com/wdtvy83" class="button_help">Pobierz program do pomocy zdalnej</a></div>
                 </div>
             </div>
         </div>
