--- a/views/service.phtml
+++ b/views/service.phtml
@@ -1,5 +1,6 @@
 <style>.tick-ul ul {
         list-style: none;
+        padding-left: 0px;
     }
 
     .tick-ul ul li:before {
@@ -7,7 +8,15 @@
         font-weight: bolder;
         content: '✓';
         padding-right: 5px;
-    }</style>
+    }
+
+    li {
+        padding-bottom: 10px;
+    }
+    h1 {
+        color:  rgb(217, 29, 21);
+    }
+</style>
 <button id="back-to-top" title="Go to top"><i class="fas fa-angle-up"></i></button>
 <header class=" dotted">
     <div class="full-box header-bacground-image1 animated fadeInSlider headers">
@@ -21,8 +30,8 @@
             <div style="overflow-x: hidden;">
                 <div class="animated fadeInRight animation-text-second">
                     <div class="animated fadeIn">
-                        Zapewniamy kompleksowe wsparcie w zakresie opieki nad sprzętem IT, bieżącej pomocy dla
-                        użytkowników (Helpdesk) oraz administrowania siecią
+                        Masz już dosyć stresów i zastojów w pracy spowodowanych awaryjnością sprzętu w Twojej firmie? Jeśli tak, to znalazłeś się we właściwym
+                        miejscu!
                     </div>
                 </div>
             </div>
@@ -50,11 +59,9 @@
 
 <div class="content-box-white" id="section1">
     <div class="container" style="    min-width: 70%;">
-        <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin about2">
-
-            <div class="col-8 animated zoomIn tick-ul" id="about">
-                <h1>W CZYM MOŻEMY CI POMÓC</h1>
-                <h2>Rozszerzona zajebiście ta lista z głównej (opis każdego podpunktu):</h2>
+        <div class="row row-50 justify-content-center justify-content-lg-between">
+            <div class="col-6 col-md-10 animated zoomIn tick-ul margin-auto" style="padding-right: 30px;">
+                <h1 style="text-align: left">W CZYM MOŻEMY CI POMÓC</h1>
                 <ul>
                     <li>Wsparcie użytkowników (helpdesk)</li>
                     <li>Zarządzanie i opiekę nad komputerami PC, notebookami oraz urządzeniami mobilnymi</li>
@@ -65,7 +72,7 @@
                     <li>Działania związane z archiwizacją danych i bezpieczeństwem kluczowych obszarów IT</li>
                     <li>Usuwanie awarii systemów komputerowych</li>
                     <li>Działania związane z ochroną antywirusową oraz bezpieczeństwem przepływu danych</li>
-                    <li>Utrzymanie systemów klasy ERP i CRM></li>
+                    <li>Utrzymanie systemów klasy ERP i CRM</li>
                     <li>Opieka nad monitoringiem przemysłowym CCTV IP</li>
                     <li>Opieka nad systemami RCP oraz KD</li>
                     <li>Doradztwo, konsulting Technologiczny</li>
@@ -73,96 +80,69 @@
                         informatyką i telekomunikacją
                     </li>
                 </ul>
-
-                <h1>SPRAWDŹ CO JESZCZE MOŻEMY DLA CIEBIE ZROBIĆ
-                    (jakieś obrazki doda się potem, jestem wzrokowcem)
-                </h1>
-                <h2>W celu zaspokojenia potrzeb naszych obecnych klientów i wychodząc na przeciw dynamicznie
-                    rozwijającemu się rynkowi IT nasza firma świadczy szereg dodatkowych usług m.in.:</h2>
-                <ul>
-                    <li>Dostawa sprzętu i oprogramowania
-                        Bezpośrednia dostawa sprzętu komputerowego, serwerów, oprogramowania
-                        oraz materiałów eksploatacyjnych w atrakcyjnych cenach.
-                    </li>
-                    <li>Projektowanie i budowa sieci strukturalnych
-                        Wykonujemy: sieci komputerowe LAN, instalacje elektryczne, monitoring CCTV
-                        IP, systemy RCP i KD. Instalacje wykonujemy z zachowaniem najwyższych
-                        standardów wraz z dostarczaniem stosownej dokumentacji oraz pomiarów.
-                    </li>
-                    <li>Microsoft Office 365
-                        Office 365 to firmowa poczta, dokumenty, kalendarz oraz praca grupowa w
-                        chmurze Microsoft. Mamy wieloletnie doświadczenie z migracją jak i
-                        administracją wszystkich usług dostępnych w Chmurze Microsoft Office 365
-                    </li>
-                    <li>Usługi w chmurze
-
-                        Udostępniamy własne, profesjonalne Centrum Przetwarzania Danych
-                        dotrzymujące najwyższych standardów bezpieczeństwa oraz realizujemy usługi
-                        w chmurze:
-                        <ul>
-                            <li>
-                                Disaster Recovery as a Service - zapasowe środowisko pracy klasy Enterprise dla
-                                serwerów wirtualnych w ramach zasobów bezpiecznej chmury prywatnej, znajdujących
-                                się w naszym Data Center.
-                            </li>
-                            <li>
-                                Back-up as a Service - kompleksowa usługa zabezpieczania danych z aplikacji,
-                                serwerów i stacji roboczych Klienta, realizowana w oparciu o narzędzia i
-                                środowisko zapewniane przez naszą firmę. Obejmuje okresowe wykonywanie kopii
-                                zapasowych (przechowywanych zgodnie z ustaloną polityką backupu) oraz testowanie
-                                możliwości odtworzenia danych na środowisku zapasowym.
-                            </li>
-                            <li>
-                                Archive as a Service - Usługa dostarcza rozwiązanie problemów wynikających z
-                                przyrostu ilości danych w systemach informatycznych. Umożliwia bezpieczne
-                                przechowywanie dowolnej ilości danych w naszym Data Center bez ponoszenia
-                                kosztów związanych z rozbudową infrastruktury klienta.
-                            </li>
-                        </ul>
-                    </li>
-                    <li>Telefonia internetowa voip:
-                        Świadczymy usługi telekomunikacyjne oparte na technologii VoIP. Naszym
-                        klientom udostępniamy wirtualne centrale telefoniczne, które umożliwiają
-                        zbudowanie profesjonalnego systemu telekomunikacyjnego z funkcjami
-                        interaktywnymi.
-                    </li>
-                    <li>Internet dla Biznesu
-                        Dostarczamy szerokopasmowy Internet (z gwarancją SLA) za pomocą łącz
-                        światłowodowych w technologi xWDM 10 Gb/s oraz GPON z możliwością
-                        nieograniczonej rozbudowy. Dodatkowo zapewniamy łączenie oddziałów firm
-                        sieciami VLANami o przepływności od 10Mb/s do nawet 0,5Gbit/s.
-                    </li>
-                </ul>
             </div>
+            <div class="col-md-6 col-lg-6 col-xs-6 animated zoomIn ideas img-mobile-hidden border-shadow ">
+            </div>
+            <div class="row row-50 justify-content-center justify-content-lg-between" style="margin-top: 100px; ">
+                <div class="col-md-10 col-lg-6 col-xs-6 server border-shadow"></div>
+                <div class="col-md-10 col-6 tick-ul" style="padding-left: 30px;">
+                    <h1>SPRAWDŹ CO JESZCZE MOŻEMY DLA CIEBIE ZROBIĆ
+                    </h1>
 
-            <div class="col-4">
-                <div class="text-box">
-                    <h3> Adres </h3>
-                    <p>
-                        VERICOM <br> ul. Parkowa 53 /2 <br> 41-303 Dąbrowa Górnicza
-                    </p>
-                    <p>
-                        NIP: 6292075389<br> REGON: 241660764
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> Telefon i fax </h3>
-                    <p>
-                        +48 502 481 334</br>
-                        +48 503 757 557
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> E-mail </h3>
-                    <p>
-                        biuro@vericom.pl
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> Facebook </h3>
-                    <p>
-                        facebook.com/vericom
-                    </p>
+                    <ul>
+                        <li>Dostawa sprzętu i oprogramowania
+                            Bezpośrednia dostawa sprzętu komputerowego, serwerów, oprogramowania
+                            oraz materiałów eksploatacyjnych w atrakcyjnych cenach.
+                        </li>
+                        <li>Projektowanie i budowa sieci strukturalnych
+                            Wykonujemy: sieci komputerowe LAN, instalacje elektryczne, monitoring CCTV
+                            IP, systemy RCP i KD. Instalacje wykonujemy z zachowaniem najwyższych
+                            standardów wraz z dostarczaniem stosownej dokumentacji oraz pomiarów.
+                        </li>
+                        <li>Microsoft Office 365
+                            Office 365 to firmowa poczta, dokumenty, kalendarz oraz praca grupowa w
+                            chmurze Microsoft. Mamy wieloletnie doświadczenie z migracją jak i
+                            administracją wszystkich usług dostępnych w Chmurze Microsoft Office 365
+                        </li>
+                        <li>Usługi w chmurze
+
+                            Udostępniamy własne, profesjonalne Centrum Przetwarzania Danych
+                            dotrzymujące najwyższych standardów bezpieczeństwa oraz realizujemy usługi
+                            w chmurze
+                            <!--                            <ul>-->
+                            <!--                                <li>-->
+                            <!--                                    Disaster Recovery as a Service - zapasowe środowisko pracy klasy Enterprise dla-->
+                            <!--                                    serwerów wirtualnych w ramach zasobów bezpiecznej chmury prywatnej, znajdujących-->
+                            <!--                                    się w naszym Data Center.-->
+                            <!--                                </li>-->
+                            <!--                                <li>-->
+                            <!--                                    Back-up as a Service - kompleksowa usługa zabezpieczania danych z aplikacji,-->
+                            <!--                                    serwerów i stacji roboczych Klienta, realizowana w oparciu o narzędzia i-->
+                            <!--                                    środowisko zapewniane przez naszą firmę. Obejmuje okresowe wykonywanie kopii-->
+                            <!--                                    zapasowych (przechowywanych zgodnie z ustaloną polityką backupu) oraz testowanie-->
+                            <!--                                    możliwości odtworzenia danych na środowisku zapasowym.-->
+                            <!--                                </li>-->
+                            <!--                                <li>-->
+                            <!--                                    Archive as a Service - Usługa dostarcza rozwiązanie problemów wynikających z-->
+                            <!--                                    przyrostu ilości danych w systemach informatycznych. Umożliwia bezpieczne-->
+                            <!--                                    przechowywanie dowolnej ilości danych w naszym Data Center bez ponoszenia-->
+                            <!--                                    kosztów związanych z rozbudową infrastruktury klienta.-->
+                            <!--                                </li>-->
+                            <!--                            </ul>-->
+                        </li>
+                        <li>Telefonia internetowa voip:
+                            Świadczymy usługi telekomunikacyjne oparte na technologii VoIP. Naszym
+                            klientom udostępniamy wirtualne centrale telefoniczne, które umożliwiają
+                            zbudowanie profesjonalnego systemu telekomunikacyjnego z funkcjami
+                            interaktywnymi.
+                        </li>
+                        <li>Internet dla Biznesu
+                            Dostarczamy szerokopasmowy Internet (z gwarancją SLA) za pomocą łącz
+                            światłowodowych w technologi xWDM 10 Gb/s oraz GPON z możliwością
+                            nieograniczonej rozbudowy. Dodatkowo zapewniamy łączenie oddziałów firm
+                            sieciami VLANami o przepływności od 10Mb/s do nawet 0,5Gbit/s.
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
