--- a/layout/layout.phtml
+++ b/layout/layout.phtml
@@ -11,18 +11,20 @@
     <link href="web/css/contact.css" rel="stylesheet" type="text/css" media="all">
     <link href="web/css/animate.css" rel="stylesheet" type="text/css" media="all">
     <link href="web/css/odometer.css" rel="stylesheet" type="text/css" media="all">
+    <link href="web/css/owl.carousel.min.css" rel="stylesheet" type="text/css" media="all">
+    <link href="web/css/owl.theme.default.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
           integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
 </head>
 <body onload="init()" style="overflow-x: hidden ">
 <main>
     <section class="container-fluid">
         <?php include 'views/menu.phtml'; ?>
         <?php page_content(); ?>
-        <?php custom_link("dada",'dasdsa'); ?>
         <?php include 'views/footer.phtml'; ?>
     </section>
 </main>
@@ -34,5 +36,11 @@
 <script type="text/javascript" src="web/js/scroll.js"></script>
 <script type="text/javascript" src="web/js/animate.js"></script>
 <script type="text/javascript" src="web/js/scripts.js"></script>
+<script type="text/javascript" src="web/js/owl.carousel.min.js"></script>
 </body>
 </html>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.css" rel="stylesheet"/>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
