--- a/views/jaworzno.phtml
+++ b/views/jaworzno.phtml
@@ -1,23 +1,51 @@
-<style>.tick-ul ul {
-        list-style: none;
-    }
+<style>
+    .tick-ul ul {
+          list-style: none;
+      }
 
     .tick-ul ul li:before {
         color: red;
         font-weight: bolder;
         content: '✓';
         padding-right: 5px;
-    }</style>
+    }
+    li {
+        margin-bottom: 10px;
+    }
+    .animation-box {
+        position: absolute;
+        top: 166px;
+        align-items: center;
+    }
+    .full-box {
+        min-width: auto;
+        min-height: 500px;
+    }
+    h1 {
+        font-family: 'Roboto Condensed', sans-serif;
+        font-size: 2rem;
+        text-align: left;
+        color: rgb(217, 29, 21);
+        margin-bottom: 1.5rem;
+        letter-spacing: 1px;
+    }
+    h2 {
+        font-family: 'Roboto Condensed', sans-serif;
+        font-size: 2rem;
+        text-align: left;
+        color: rgb(217, 29, 21);
+        margin-bottom: 1.5rem;
+        letter-spacing: 1px;
+    }
+</style>
 
 <button id="back-to-top" title="Go to top"><i class="fas fa-angle-up"></i></button>
 
 <header class=" dotted">
     <div class="full-box header-bacground-image1 animated fadeInSlider headers">
-        <button class="arrow arrow-left" onclick="plusDivs(-1)">&#10094;</button>
-        <button class="arrow arrow-right" onclick="plusDivs(1)">&#10095;</button>
         <div class="animation-box">
             <div class="animated fadeInLeft animation-text-first">
-                <div class="animated fadeIn">OPIEKA INFORMATYCZNA FIRM
+                <div class="animated fadeIn">OUTSOURCING IT JAWORZNO
                 </div>
             </div>
             <div style="overflow-x: hidden;">
@@ -30,69 +58,39 @@
             </div>
         </div>
     </div>
-    <div class="full-box header-bacground-image2 animated fadeInSlider headers">
-        <button class="arrow arrow-left" onclick="plusDivs(-1)">&#10094;</button>
-        <button class="arrow arrow-right" onclick="plusDivs(1)">&#10095;</button>
-        <div class="animation-box">
-            <div class="animated fadeInLeft animation-text-first">
-                <div class="animated fadeIn">OPIEKA INFORMATYCZNA FIRM
-                </div>
-            </div>
-            <div style="overflow-x: hidden;">
-                <div class="animated fadeInRight animation-text-second">
-                    <div class="animated fadeIn">
-                        Zapewniamy kompleksowe wsparcie w zakresie opieki nad sprzętem IT, bieżącej pomocy dla
-                        użytkowników (Helpdesk) oraz administrowania siecią
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<!--    <div class="full-box header-bacground-image2 animated fadeInSlider headers">-->
+<!--        <button class="arrow arrow-left" onclick="plusDivs(-1)">&#10094;</button>-->
+<!--        <button class="arrow arrow-right" onclick="plusDivs(1)">&#10095;</button>-->
+<!--        <div class="animation-box">-->
+<!--            <div class="animated fadeInLeft animation-text-first">-->
+<!--                <div class="animated fadeIn">OPIEKA INFORMATYCZNA FIRM-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div style="overflow-x: hidden;">-->
+<!--                <div class="animated fadeInRight animation-text-second">-->
+<!--                    <div class="animated fadeIn">-->
+<!--                        Zapewniamy kompleksowe wsparcie w zakresie opieki nad sprzętem IT, bieżącej pomocy dla-->
+<!--                        użytkowników (Helpdesk) oraz administrowania siecią-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 </header>
 
 <div class="content-box-white" id="section1">
     <div class="container" style="    min-width: 70%;">
         <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin about2">
             <div class="col-8 animated zoomIn tick-ul" id="about" style="text-align: justify;">
-                <h1> Katowice </h1>
-            <p>
-                Większość firm obecnie swoją codzienną pracę opiera na nowoczesnym sprzęcie komputerowym. Jednak trzeba się liczyć z tym, że nadal są to jednak urządzenia, które mogą ulegać awarii. Dlatego warto zadbać między innymi o stworzenie takich warunków, w których będzie można mieć stałą kontrole nad tymi urządzeniami i ich technicznym stanem. Jeśli firma nie chce tworzyć kompleksowo działu informatycznego warto będzie wykorzystać usługi informatyczne dla firm w Katowicach świadczone przez zewnętrzne podmioty.
-            </p>
-                <h2>Profesjonalny outsourcing IT w Katowicach</h2>
+                <h1> Jaworzno </h1>
                 <p>
-                    Obecnie możemy liczyć na profesjonalny outsourcing IT w Katowicach, który będzie realizowany przez doświadczone firmy, które mają odpowiednie w tym zakresie przygotowanie i są w stanie kompleksowo zająć się sprzętem komputerowym jaki w firmie funkcjonuje. Obsługa informatyczna dla firm przez zewnętrzne podmioty to bardzo duża wygoda, ponieważ przy nawiązaniu stałej współpracy można liczyć na pomoc takich firm, a jednocześnie nie będzie obaw o wysokie koszty, które pojawiłyby się, gdyby ktoś w tym temacie została zatrudniony w firmie na etat.
-                </p>
-               <?php include("city-common.phtml"); ?>
+                    Firma VeriCom oferuje usługi informatyczne dla firm w Jaworznie. To świetna propozycja dla przedsiębiorców, którzy w ramach swojej działalności powszechnie wykorzystują komputery i ich możliwości. Trzeba się jednak liczyć z tym, że takie urządzenia w niektórych sytuacjach mogą ulec uszkodzeniu. Jeśli do takiej sytuacji dojdzie to warto będzie się zdecydować wtedy na pomoc ze strony VeriCom, firmy której pracownicy będą w stanie sprawnie zareagować i usunąć problemy techniczne dotyczące danego sprzętu.            </p>
+                <h2>Doświadczenie w obsłudze IT firm w Jaworznie</h2>
+                <p>
+                    Jeśli chodzi o outsourcing IT w Jaworznie firma VeriCom oferuje sprawne działania i profesjonalne podejście do każdej firmy, którą będzie się zajmować, dlatego można liczyć na sprawną obsługę i szybką realizację usług w zakresie usuwania potencjalnych awarii, które na danym sprzęcie będą się pojawiać. Warto o tym pamiętać i faktycznie z takich możliwości skorzystać. Będzie to dla wielu firm rozwiązanie lepsze niż zatrudnienie specjalisty z branży IT na stałe.                </p>
+                <?php include("city-common.phtml"); ?>
             </div>
-            <div class="col-4">
-                <div class="text-box">
-                    <h3> Adres </h3>
-                    <p>
-                        VERICOM <br> ul. Parkowa 53 /2 <br> 41-303 Dąbrowa Górnicza
-                    </p>
-                    <p>
-                        NIP: 6292075389<br> REGON: 241660764
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> Telefon i fax </h3>
-                    <p>
-                        +48 502 481 334</br>
-                        +48 503 757 557
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> E-mail </h3>
-                    <p>
-                        biuro@vericom.pl
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3> Facebook </h3>
-                    <p>
-                        facebook.com/vericom
-                    </p>
-                </div>
+            <div class="col-4 city border-shadow animated zoomIn" style="box-shadow: 0px 0px 35px -7px rgba(0, 0, 0, 0.75);">
             </div>
         </div>
     </div>
