--- a/views/menu.phtml
+++ b/views/menu.phtml
@@ -11,18 +11,13 @@
         </div>
         <div class="menu-normal" id="top-menu">
             <ul class="">
-                <ul><?php nav_menu('nav_menu'); ?></ul>
+               <?php nav_menu('nav_menu'); ?>
             </ul>
         </div>
     </div>
     <div id="navigation" class="menu menu-link">
         <ul class="topnav" id="myTopnav">
-            <li><a href="application/views/home.phtml">STRONA GŁÓWNA</a></li>
-            <li><a href="/">ŚWIADCZONE USŁUGI</a></li>
-            <li><a href="/">OBSŁUGIWANE MIASTA</a></li>
-            <li><a href="/">Pomoc zdalna</a></li>
-            <li><a href="application/views/about.phtml">O Nas</a></li>
-            <li><a href="/">Kontakt</a></li>
+            <?php nav_menu('nav_menu'); ?>
         </ul>
     </div>
 </div>
